# rag4p-gui

./: README.md  example_text.md  pyproject.toml  run.py
data/: metadata.json  short_wordpress.jsonl
data/dev_to/: all_dev_to.jsonl  few_dev_to.jsonl
data/jfall/: all_sessions.jsonl
data/luminis_wp/: all_luminis_wp.jsonl  few_luminis_wp.jsonl
rag4p_gui/: containers.py  footer.py  generating_sidebar.py  home.py  indexing_sidebar.py  my_menu.py  my_sidebar.py  prompting_sidebar.py  retrieval_sidebar.py  session.py
rag4p_gui/components/: manage_collections.py  select_content_store.py  select_embedder.py  select_llm.py  select_number_of_chunks.py  select_opensearch_collection.py  select_retriever.py  select_splitter.py  select_strategy.py  select_weaviate_collection.py
rag4p_gui/data/: content_store_metadata.py  content_store_metadata_service.py  data_sets.py  indexing_data.py
rag4p_gui/data/downloaders/: dev_to.py
rag4p_gui/data/readers/: dev_to_jsonl_reader.py  jfall_jsonl_reader.py  teqnation_jsonl_reader.py  wordpress_jsonl_reader.py
rag4p_gui/integrations/opensearch/: __init__.py  connect.py  indexing.py  opensearch_indexing_data.py
rag4p_gui/integrations/weaviate/: __init__.py  connect.py  dev_to.py  indexing.py  luminis.py  teqnation.py  weviate_indexing_data.py
rag4p_gui/pages/: 10_indexing.py  11_embeddings.py  12_chunking.py  13_tokenizing.py  1_embeddings.py  20_retrieving.py  2_chunking.py  30_generating.py  31_prompting.py  32_chat.py  3_tokenization.py
rag4p_gui/util/: __init__.py  embedding.py  file_util.py  generation.py  splitter.py
