[tool.poetry]
name = "rag4p-gui"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.34.0"
rag4p = "^0.9.0"
streamlit-antd-components = "^0.3.2"
scikit-learn = "^1.5.0"
plotly = "^5.22.0"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
watchdog = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
